--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- buttons on slider -->
+  <script src="https://kit.fontawesome.com/66c63b4ed2.js"></script>
+
+    <!-- boxicons -->
+  <script src="https://unpkg.com/boxicons@2.1.1/dist/boxicons.js"></script>
+   
+  <!-- boxicons react animation -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
+
 </html>
